    FIXED: krusader doesn't exit at closing the application
    FIXED: right clicking on media button doesn't work
    FIXED: tabs were no longer movable, thanks to Victor (kernel_daemon)
    FIXED: 3 valgrind fixes by Alexander Stein
    FIXED: viewer would show empty menus, thanks to CtHx
    FIXED: crash when changing view type

2.2.0-beta1 "DeKade"
====================

    ADDED: option: Panel > General > Tabs > Show new/close tab buttons
    ADDED: options: Panel > Buttons > Show Media/History/Bookmarks Button
    ADDED: options: Panel > General > Status/Totalsbar settings >
           Show Statusbar, Show Totalsbar, Show Size In Bytes,
           Show free disk space in the Totalsbar
    ADDED: option: Look&Feel > Quicksearch > "Up/Down cancels Quicksearch"
    ADDED: dbus interface: org.krusader.PanelManager.newTab(QString url) /
           newTabs(QStringList)
    ADDED: url command-line argument
    ADDED: action "Show View Options Menu"
    ADDED: detailed view context-menu option "Automatically Resize Columns"
    ADDED: action "cancel refresh" triggered by ESC by default
    ADDED: change icon size individually per view
    ADDED: thumbnails - toggleable by mainmenu > view > Show Previews
    ADDED: 128x128 pixel versions of the application icon, needed by Mac OS X
    ADDED: Konfigurator options: Look&Feel > Panel >
           Status/Totalsbar settings > Draw frame / Fill background
    ADDED: Konfigurator option: Colors > Colors > Other > Statusbar
    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout >
           Quicksearch position / Tab Bar position
    ADDED: buttons "(un)mount" and "eject" in mountman gui
    ADDED: KMountMan::removable(), KMountMan::networkFilesystem()

  CHANGED: reorganize Konfigurator: "Look & Feel" page becomes "Panel" /
           move several options to new places
  CHANGED: when open/refresh of a dir fails, don't annoy the user with a message
           box, but display the error embedded into the panel