@@ -504,10 +504,9 @@ bool compareTextsKrusader(QString& aS1, QString& aS2, const KrViewProperties * _
     }
 
     // sometimes, localeAwareCompare is not case sensitive. in that case, we need to fallback to a simple string compare (KDE bug #40131)
-    bool lUseLocaleAware = (_viewProperties->sortMode & KrViewProperties::IgnoreCase)
-                           || _viewProperties->localeAwareCompareIsCaseSensitive;
-
-    if (lUseLocaleAware)
+    if (((_viewProperties->sortMode & KrViewProperties::IgnoreCase)
+                || _viewProperties->localeAwareCompareIsCaseSensitive)
+            && (_viewProperties->sortMode & KrViewProperties::LocaleAwareSort))
         return QString::localeAwareCompare(aS1, aS2) < 0;
     else
         // if localeAwareCompare is not case sensitive then use simple compare is enough
@@ -1012,5 +1011,7 @@ KrViewProperties::SortSpec KrVfsModel::convertSortOrderToKrViewProperties(int so
         sp = static_cast<KrViewProperties::SortSpec>(sp | KrViewProperties::AlwaysSortDirsByName);
     if (sortMode & KrViewProperties::Descending)
         sp = static_cast<KrViewProperties::SortSpec>(sp | KrViewProperties::Descending);
+    if (sortMode & KrViewProperties::LocaleAwareSort)
+        sp = static_cast<KrViewProperties::SortSpec>(sp | KrViewProperties::LocaleAwareSort);
     return sp;
 }
