@@ -1,3 +1,5 @@
+    ADDED: option: Panel > View > Locale aware sorting
+
     FIXED: krusader doesn't exit at closing the application
     FIXED: right clicking on media button doesn't work
     FIXED: tabs were no longer movable, thanks to Victor (kernel_daemon)
